tests/ui/span/issue-43927-non-ADT-derive.stderr
error: cannot determine resolution for the attribute macro `derive`
  --> $DIR/issue-43927-non-ADT-derive.rs:1:4
   |
LL | #![derive(Debug, PartialEq, Eq)] // should be an outer attribute!
   |    ^^^^^^
   |
   = note: import resolution is stuck, try simplifying macro imports

error: `derive` attribute cannot be used at crate level
  --> $DIR/issue-43927-non-ADT-derive.rs:1:1
   |
LL | #![derive(Debug, PartialEq, Eq)] // should be an outer attribute!
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
help: perhaps you meant to use an outer attribute
   |
LL | #[derive(Debug, PartialEq, Eq)] // should be an outer attribute!
   | ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

error: aborting due to 2 previous errors

